Update API transactions/active
