# pkg/api/api_transactions.go
@@ -259,18 +259,18 @@ func (api *TransactionsAPI) DeleteSingleTransaction(c echo.Context) error {
 }
 
 // ################################################################################
-// GetOngoingTransactions - function to get user`s ongoing transactions
-// GetOngoingTransactions godoc
-// @Summary Get Ongoing Transactions.
-// @Description Get user`s ongoing transactions.
+// CheckActiveTransactions - function to check user`s active transactions
+// CheckActiveTransactions godoc
+// @Summary Check Active Transactions.
+// @Description Check user`s active transactions.
 // @Tags transactions
 // @Produce json
-// @Success 200 {object} models.OngoingTransactions
+// @Success 200 {object} models.ActiveTransactionsResponse
 // @Router /api/v1/transactions/ongoing [GET]
-func (api *TransactionsAPI) GetOngoingTransactions(c echo.Context) error {
+func (api *TransactionsAPI) CheckActiveTransactions(c echo.Context) error {
 	sessionID := c.Request().Header.Get("session_id")
 
-	ongoingTransactionsResponse, err := api.transactionsRepo.GetOngoingTransactions(sessionID)
+	ongoingTransactionsResponse, err := api.transactionsRepo.CheckActiveTransactions(sessionID)
 	if err != nil {
 		return utils.PrepareErrorResponse(c, err.Error(), consts.CErrorsInternalError, http.StatusInternalServerError)
 	}
